# evq

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  evq_config.h.in
docs/: readme.md
examples/: CMakeLists.txt  evq_sample_direct.cpp  evq_sample_event.cpp
examples/stm32f411/: CMakeLists.txt  CMakePresets.json
examples/stm32f411-freertos/: CMakeLists.txt  CMakePresets.json  readme.md
examples/stm32f411-freertos/src/: board.c  main.c  profiler.c  profiler.h  profiler.tsdl  profiler_itm.c  profiler_uart.c  retarget.c
examples/stm32f411-freertos/tools/: decode_profiler.py
examples/stm32f411-keilrtx/: CMakeLists.txt  stm32f411ce.ld
examples/stm32f411-keilrtx/src/: board.c  board.h  irq_handlers.c  main.c  usb.c  usb.h
examples/stm32f411-zephyr/: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
examples/stm32f411/cmake/: toolchain_arm_none_eabi.cmake
examples/stm32f411/src/: FreeRTOSConfig.h  blackpill-bootloader.ld  board.c  board.h  freertos_hooks.c  log.c  main.c  retarget.c  usb.c  usb.h
port/freertos/: evq_port_egroup.c  evq_port_memory.c  evq_port_mutex.c  evq_port_time.c
port/linux/: evq_port.c  evq_port_egroup.cpp  evq_port_log.cpp  evq_port_memory.cpp  evq_port_mutex.cpp  evq_port_queue.cpp  evq_port_time.cpp
src/: evq_core.c  evq_core_p.h  evq_event.c  evq_event_p.h  evq_handle.c  evq_handle_p.h  evq_log.c  evq_message.c  evq_stream.c
src/include/evq/: evq_core.h  evq_core_p.h  evq_event.h  evq_event_p.h  evq_handle.h  evq_handle_p.h  evq_log.h  evq_message.h  evq_port.h  evq_stream.h  evq_types.h
tests/: CMakeLists.txt  test_evq.cpp  test_evq_log.cpp  test_evq_message.cpp  test_evq_stream.cpp
tests/mocks/: mock_evq_log.cpp  mock_evq_port.cpp  mock_evq_port.hpp
